--- a/public/addvisit.html
+++ b/public/addvisit.html
@@ -188,40 +188,80 @@ body {
     font-size: 18px;
     color: #888;
 }
+#redirect-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9); /* Darker background */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999; /* Ensure it stays on top */
+    backdrop-filter: blur(5px); /* Adds a blur effect to the background */
+}
+
+.overlay-content {
+    background: white;
+    padding: 20px 30px;
+    border-radius: 10px;
+    font-size: 1.5em;
+    color: #333;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    animation: fadeIn 0.5s ease-in-out;
+    font-weight: bold;
+}
+
+/* Smooth fade-in animation */
+@keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.9); }
+    to { opacity: 1; transform: scale(1); }
+}
+
+/* Prevent scrolling while overlay is active */
+body.no-scroll {
+    overflow: hidden;
+}
+/* Toast Notification Styling */
+.toast-message {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #28a745; /* Green for success */
+    color: white;
+    padding: 12px 20px;
+    border-radius: 5px;
+    font-size: 1em;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s, bottom 0.5s;
+    z-index: 9999;
+}
+
+.toast-message.show {
+    opacity: 1;
+    visibility: visible;
+    bottom: 40px;
+}
 
 
     </style>
 </head>
 <body>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const authLink = document.getElementById("authLink");
-
-            // Check if user is logged in
-            if (!localStorage.getItem("loggedInUser")) {
-                window.location.href = "/login.html"; // Redirect if not logged in
-            } else {
-                // Set Logout functionality
-                authLink.innerHTML = '<a href="#" id="logoutBtn">Logout</a>';
-                document.getElementById("logoutBtn").addEventListener("click", function (event) {
-                    event.preventDefault(); // Prevent default anchor behavior
-                    localStorage.removeItem("loggedInUser"); // Remove user session
-                    alert("Logged out successfully!"); // Show logout success message
-                    window.location.href = "/index.html"; // Redirect to homepage
-                });
-            }
-        });
-    </script>
     <header id="loggedInHeader">
         <div class="logo">
             <a href="#"><img src="/images/logo.jpg" alt="logo"></a>
         </div>
         <nav class="nav-menu">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="#destinations">Destinations</a></li>
-                <li><a href="#about-us">About Us</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="/dashboard.html">Home</a></li>
+                <li><a href="/dashboard.html/#destinations">Destinations</a></li>
+                <li><a href="/dashboard.html/#about-us">About Us</a></li>
+                <li><a href="/dashboard.html/#contact-us">Contact Us</a></li>
                 <li><a href="/bookings.html">Bookings</a></li>
                 <li><a href="/addvisit.html">Planned trips</a></li>
                 <li id="authLink"><a href="#">Logout</a></li>
