--- a/public/itinerary.html
+++ b/public/itinerary.html
@@ -43,10 +43,10 @@
                 </div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#destinations">Destinations</a></li>
-                        <li><a href="#about-us">About us</a></li>
-                        <li><a href="#contact-us">Contact us</a></li>
+                        <li><a href="/dashboard.html">Home</a></li>
+                        <li><a href="/dashboard.html/#destinations">Destinations</a></li>
+                        <li><a href="/dashboard.html/#about-us">About Us</a></li>
+                        <li><a href="/dashboard.html/#contact-us">Contact Us</a></li>
                         <li><a href="/bookings.html">Bookings</a></li>
                         <li><a href="/addvisit.html">Planned trips</a></li>
                         <li id="authLink"><a href="#">Logout</a></li>
@@ -64,9 +64,9 @@
                 <nav class="nav-menu index">
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="#destinations">Destinations</a></li>
-                        <li><a href="#about-us">About us</a></li>
-                        <li><a href="#contact-us">Contact us</a></li>
+                        <li><a href="/index.html/#destinations">Destinations</a></li>
+                        <li><a href="/index.html/#about-us">About Us</a></li>
+                        <li><a href="/index.html/#contact-us">Contact Us</a></li>
                         <li><a href="/register.html">Register</a></li>
                         <li><a href="/addvisit.html">Planned trips</a></li>
                         <li id="authLink"><a href="/login.html">Login</a></li>
