--- a/public/payment.html
+++ b/public/payment.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
-    <link rel="stylesheet" href="/css/payment.css">
     <style>
         body {
     font-family: Arial, sans-serif;
@@ -136,26 +135,41 @@ footer {
     bottom: 0;
     font-size: 14px;
 }
+#price {
+    font-weight: bold;
+    font-size: 1.5em; /* Slightly larger for better emphasis */
+    background: linear-gradient(45deg, #ff0000, #ff7300); /* Gradient red-orange effect */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; /* Gradient text effect */
+    text-shadow: 2px 2px 8px rgba(255, 0, 0, 0.3); /* Soft glow effect */
+    text-align: center;
+    transition: transform 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+}
+
+#price:hover {
+    transform: scale(1.1); /* Slight zoom effect on hover */
+    text-shadow: 3px 3px 12px rgba(255, 115, 0, 0.5); /* Enhanced glow */
+}
 
     </style>
 </head>
 <body>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function () {
+
+    const totalPriceElement = document.getElementById("price");
+
+        // Get final price from localStorage
+        const finalPrice = localStorage.getItem("finalPrice");
+
+        if (finalPrice) {
+            totalPriceElement.textContent = `Total Price: ₹${finalPrice}`;
+        }
     const authLink = document.getElementById("authLink");
 
     // Check if user is logged in
     if (!localStorage.getItem("loggedInUser")) {
         window.location.href = "/login.html"; // Redirect if not logged in
-    } else {
-        // Set Logout functionality
-        authLink.innerHTML = '<a href="#" id="logoutBtn">Logout</a>';
-        document.getElementById("logoutBtn").addEventListener("click", function (event) {
-            event.preventDefault(); // Prevent default anchor behavior
-            localStorage.removeItem("loggedInUser"); // Remove user session
-            alert("Logged out successfully!"); // Show logout success message
-            window.location.href = "/index.html"; // Redirect to homepage
-        });
     }
 });
 </script>
@@ -195,6 +209,8 @@ footer {
                 <label for="cvv">CVV:</label>
                 <input type="text" id="cvv" name="cvv">
                 <br>
+                <h2 id="price" for="price">Total Price</h2>
+                <br>
             </div>
             
             <input type="submit" value="Pay Now">
@@ -207,11 +223,50 @@ footer {
     </footer>
 
     <script>
-        function processPayment(event) {
-            event.preventDefault();
+function processPayment(event) {
+    event.preventDefault();
+
+    // Retrieve details from localStorage
+    const userId = localStorage.getItem("loggedInUser"); // Assuming user_id is stored in localStorage
+    const price = localStorage.getItem("finalPrice"); // Total price from checkout
+    const placeToVisit = localStorage.getItem("placetovisit"); // List of places
+
+    if (!userId || !price || !placeToVisit) {
+        alert("Missing booking details! Please try again.");
+        return;
+    }
+
+    // Prepare data for the request
+    const bookingData = {
+        user_id: userId,
+        price: parseFloat(price),
+        place_to_visit: placeToVisit,
+        booking_status: "Confirmed"
+    };
+
+    // Send data to the server
+    fetch("http://localhost:5000/api/bookings/add", {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify(bookingData)
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.success) {
             alert("Payment Successful! Your booking is confirmed.");
-            window.location.href = 'dashboard.html';
+            window.location.href = "bookings.html"; // Redirect to bookings page
+        } else {
+            alert("Booking failed! Please try again.");
         }
+    })
+    .catch(error => {
+        console.error("Error:", error);
+        alert("Something went wrong! Please try again.");
+    });
+}
+
 
     </script>
 </body>
