--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -120,7 +120,7 @@
             return;
         }
 
-        const backendUrl = "http://localhost:5000/api/users/resetPassword"; // Adjust for your backend VM IP
+        const backendUrl = `http://${window.location.hostname}:5000/api/users/resetPassword`; // Adjust for your backend VM IP
         const response = await fetch(backendUrl, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
