--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <a href="#"><img src="/images/logo.jpg" alt="logo"></a>
         </div>
-        <nav class="nav-menu">
+        <nav id="navMenu" class="nav-menu">
             <ul>
                 <li><a href="/dashboard.html">Home</a></li>
                 <li><a href="#destinations">Destinations</a></li>
@@ -29,6 +29,11 @@
             <div class="user-avatar" id="userAvatar"></div>
             <div class="user-greeting" id="userGreeting"></div>
         </div>
+        <div style="padding-left: 70px;" class="burger" id="burger" onclick="toggleMenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
     </header>
 </header>
 
@@ -138,7 +143,13 @@
             }
         });
     </script>
-
+<script>
+    // Toggle the navigation menu
+function toggleMenu() {
+  const navMenu = document.getElementById('navMenu');
+  navMenu.classList.toggle('show');
+}
+</script>
     <script src="/js/script.js"></script>
     <script src="/js/stateData.js"></script>
 
