--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Escape and Explore</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/jpg" href="/images/favicon.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <header>
@@ -13,7 +15,7 @@
             <div class="logo">
                 <a href="#"><img src="/images/logo.jpg" alt="logo"></a>
             </div>
-                <nav class="nav-menu index">
+                <nav id="navMenu" class="nav-menu index">
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="#destinations">Destinations</a></li>
@@ -25,6 +27,11 @@
                         <!-- <li><a href="/login.html" id="loginLogoutLink">Logout</a></li> -->
                     </ul>
                 </nav>
+                <div class="burger" id="burger" onclick="toggleMenu()">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                  </div>
         </header>
     </header>
 
@@ -162,6 +169,16 @@
             });
         }
     });
+
+    </script>
+<script>
+    // Toggle the navigation menu
+function toggleMenu() {
+  const navMenu = document.getElementById('navMenu');
+  navMenu.classList.toggle('show');
+}
+
+
     
 </script>
 
